test/errors/dotExprInLimitations.compopts
--detailed-errors # dotExprInLimitations-detailed.good
--no-detailed-errors # dotExprInLimitations-brief.good
